cluster/apps/media/apps/sonarr/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: sonarr
          namespace: media
          port: 8989
      middlewares:
        - name: ak-outpost-proxy-outpost
          namespace: authentik
  tls: {}
